--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "ember-resolver": "^8.0.3",
     "ember-source": "~3.28.8",
     "ember-template-lint": "^3.15.0",
+    "ember-test-selectors": "^6.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-ember": "^10.5.8",
